﻿			wxFormBuilder ChangeLog
************************************************************************
date Version 3.00.46 (Beta 3)
+ Added "column_sizes" and "row_sizes" properties to wxGrid.
  Resizing the columns/rows by dragging is the easiest way to use these.
+ Added events to wxStdDialogButtonSizer.
^ Reorganized wxGrid properties.
* Fixed FS#199 - "tooltips lost on XRC import"
* Fixed import of "enabled", "hidden", and "subclass" properties.
* Fixed "FS#208 - Error in generated OnUpdateUI event handler registration code."
* Fixed "Edit->Paste Object From Clipboard" was not enabled until the next selection.
* Properties with floating-point values will be saved and generated using the decimal point,
  but user entry will use the separator ('.' or ',') according to the locale settings.
  This closes "FS#203 - sashgravity -> float".
+ Added "FS#211 - Optimized code/xrc generation in preview editors"
^ Massive font update.
    Default values for font properties are now allowed and encouraged.
    The "underline" and "family" subproperties are now recognized.
    Fixed FS#205 - "wxStaticText If you bold a font and then remove the bold, the size shows up wrong"
    Watch for bugs.
^ Applied patch from ChrisBorgolte which removes the need for wx2.6 compatiblity mode.
    -wxTHICK_FRAME and wxNO_3D styles have been removed from wxDialog. The project conversion wizard
     will take appropriate action.

06/13/2007 Version 3.00.45 (Beta 3)
* Fixed FS#198 - "Wrong place of the ID in a wxHyperlinkCtrl."
+ Added support for context-sensitive help.
  To Use:
  Set the Project's "help_provider" property to one of the help providers listed.
  Set the "context_help" wxWindow property on any widget.
  wxMSW: Use the wxDIALOG_EX_CONTEXTHELP extra style on the dialog or frame.
  Others: Add a wxContextHelpButton by using wxStdDialogButtonSizer.
^ Updated the about dialog to include more details about the people involved in
  the project.

06-06-2007 Version 3.00.44 (Beta 3)