@@ -170,6 +170,32 @@
 	<templates class="choicebookpage">
 		<template name="page_add">#parent $name->AddPage( #child $name, $label, $select );</template>
 	</templates>
+	
+	<templates class="wxAuiNotebook">
+		<template name="declaration">#class* $name;</template>
+		<template name="construction">$name = new #class( #wxparent $name, $id, $pos, $size, $style #ifnotnull $window_style @{ |$window_style @} );</template>
+		<template name="include">@#include &lt;wx/aui/auibook.h&gt;</template>		
+		<template name="evt_entry_OnAuiNotebookPageClose">EVT_AUINOTEBOOK_PAGE_CLOSE( $id, #handler )</template>
+		<template name="evt_entry_OnAuiNotebookPageChanged">EVT_AUINOTEBOOK_PAGE_CHANGED( $id, #handler )</template>
+		<template name="evt_entry_OnAuiNotebookPageChanging">EVT_AUINOTEBOOK_PAGE_CHANGING( $id, #handler )</template>
+		<template name="evt_entry_OnAuiNotebookButton">EVT_AUINOTEBOOK_BUTTON( $id, #handler )</template>
+		<template name="evt_entry_OnAuiNotebookBeginDrag">EVT_AUINOTEBOOK_BEGIN_DRAG( $id, #handler )</template>
+		<template name="evt_entry_OnAuiNotebookEndDrag">EVT_AUINOTEBOOK_END_DRAG( $id, #handler )</template>
+		<template name="evt_entry_OnAuiNotebookDragMotion">EVT_AUINOTEBOOK_DRAG_MOTION( $id, #handler )</template>
+		<template name="evt_entry_OnAuiNotebookAllowDND">EVT_AUINOTEBOOK_ALLOW_DND( $id, #handler )</template>		
+		<template name="evt_connect_OnAuiNotebookPageClose">$name->Connect( wxEVT_COMMAND_AUINOTEBOOK_PAGE_CLOSE, #handler, NULL, this );</template>
+		<template name="evt_connect_OnAuiNotebookPageChanged">$name->Connect( wxEVT_COMMAND_AUINOTEBOOK_PAGE_CHANGED, #handler, NULL, this );</template>
+		<template name="evt_connect_OnAuiNotebookPageChanging">$name->Connect( wxEVT_COMMAND_AUINOTEBOOK_PAGE_CHANGING, #handler, NULL, this );</template>
+		<template name="evt_connect_OnAuiNotebookButton">$name->Connect( wxEVT_COMMAND_AUINOTEBOOK_BUTTON, #handler, NULL, this );</template>
+		<template name="evt_connect_OnAuiNotebookBeginDrag">$name->Connect( wxEVT_COMMAND_AUINOTEBOOK_BEGIN_DRAG, #handler, NULL, this );</template>
+		<template name="evt_connect_OnAuiNotebookEndDrag">$name->Connect( wxEVT_COMMAND_AUINOTEBOOK_END_DRAG, #handler, NULL, this );</template>
+		<template name="evt_connect_OnAuiNotebookDragMotion">$name->Connect( wxEVT_COMMAND_AUINOTEBOOK_DRAG_MOTION, #handler, NULL, this );</template>
+		<template name="evt_connect_OnAuiNotebookAllowDND">$name->Connect( wxEVT_COMMAND_AUINOTEBOOK_ALLOW_DND, #handler, NULL, this );</template>
+	</templates>                      
+
+	<templates class="auinotebookpage">
+		<template name="page_add">#parent $name->AddPage( #child $name, $label, $select, $bitmap );</template>
+	</templates>
 
 	<templates class="wxScrolledWindow">
 		<template name="declaration">#class* $name;</template>
